--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "eslint-plugin-styled-components-a11y": "^2.1.36",
+    "i": "^0.3.7",
+    "npm": "^10.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
